5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1577_1560.log
== SUBMITION (2019-03-26 18:05:01) 
-- CODE:
string = "Augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra"
print(string(lower(Augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra)))
-- EXECUTION TIME:
0.195835
-- ERROR:
  File "/home/codebench/codes/1577/1560/main.py", line 2
    print(string(lower(Augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra)))
                                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:05:19) 
-- CODE:
string = "Augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra"
print(string(lower))
-- EXECUTION TIME:
0.118867
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1560/main.py", line 2, in <module>
    print(string(lower))
NameError: name 'lower' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:44) 
-- CODE:
string = "Augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.259747
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:20:48) 
-- CODE:
string = "Augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra"
print(string.lower())
-- OUTPUT:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:20:58) 
-- CODE:
string = "Augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra"
print(string.lower())
-- EXECUTION TIME:
0.196512
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:21:29) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.lower())
-- EXECUTION TIME:
0.201722
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
